fixed list overlapping bug

--- a/juggle-recommender-web/src/trickList.css
+++ b/juggle-recommender-web/src/trickList.css
@@ -60,7 +60,7 @@
   margin-left : 1px;
   display: inline-block;
   position: absolute;
-  z-index: 10;
+  z-index: 0;
   opacity : 100%;
   background-color : white;
   box-shadow : 5px 10px 8px #888888;;
